# proseflow

./: .gitignore  00_core.ipynb  Makefile  README.md  Schwichtenberg J - No-nonsense classical mechanics_ a student-friendly introduction (2019, No-Nonsense Books) - libgen.li.djvu  Untitled.ipynb  Untitled1.ipynb  aws_utils.ipynb  biomedrel.ipynb  cancer_10k.ipynb  datasethelpers.ipynb  historian.ipynb  index.ipynb  load.ipynb  load2.ipynb  longevity10k.ipynb  networks.ipynb  params.ipynb  pubmed.ipynb  pyproject.toml  roam_utils.ipynb  rulemaker.ipynb  save.ipynb  semanticscholar_api.ipynb  settings.ini  snorkel.ipynb  spec.ipynb  spikeQ.py  system_modules.txt  text.ipynb  text2.ipynb  utils.ipynb  utils2.ipynb
.github/workflows/: main.yml
cache_dir/: cached_dev_roberta_128_2_613  cached_train_roberta_128_2_100  cached_train_roberta_128_4_100  cached_train_roberta_128_4_2448
docs/: _config.yml  aws_utils.html  historian.html  index.html  longevity10k.html  networks.html  pubmed.html  roam_sentences.html  scraping.html  semanticscholar_api.html  text.html  utils.html
docs/_data/: topnav.yml
integration/: roam_sentences.ipynb  scraping.ipynb
misc/: historian.ipynb  semanticscholar_api.ipynb  semanticscholar_paper_example_api.json
proseflow/: V.py  _nbdev.py  aws_utils.py  core.py  datasethelpers.py  load.py  longevity10k.py  networks.py  params.py  pubmed.py  roam_utils.py  save.py  spec.py  text.py  utils.py
runs/Dec11_17-24-44_Markuss-MacBook-Air.local/: events.out.tfevents.1607707484.Markuss-MacBook-Air.local
runs/Dec11_18-03-18_Markuss-MacBook-Air.local/: events.out.tfevents.1607709798.Markuss-MacBook-Air.local
runs/Dec11_18-11-39_Markuss-MacBook-Air.local/: events.out.tfevents.1607710299.Markuss-MacBook-Air.local
runs/Dec11_18-12-41_Markuss-MacBook-Air.local/: events.out.tfevents.1607710361.Markuss-MacBook-Air.local
runs/Dec11_18-18-57_Markuss-MacBook-Air.local/: events.out.tfevents.1607710737.Markuss-MacBook-Air.local
runs/Dec11_18-33-04_Markuss-MacBook-Air.local/: events.out.tfevents.1607711584.Markuss-MacBook-Air.local
runs/Dec11_18-44-41_Markuss-MacBook-Air.local/: events.out.tfevents.1607712281.Markuss-MacBook-Air.local
