[tool.poetry]
name = "proseflow"
version = "0.1.2"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nbdev = "^1.1.5"
multipledispatch = "^0.6.0"
gspread = "^3.6.0"
pandas = "^1.1.4"
textacy = "^0.10.1"
spacy_stanza = "^0.2.4"
sentence_transformers = "^0.3.9"
spacy = "^2.3.2"
stanza = "^1.1.1"
requests = "^2.25.0"
python-dotenv = "^0.15.0"
typeguard = "^2.10.0"
twine = "^3.2.0"
varname = "^0.5.3"
boto3 = "^1.16.21"
botocore = "^1.19.21"
faiss-cpu = "^1.6.4"
toolz = "^0.11.1"
jupyter_contrib_nbextensions = "^0.5.1"
autopep8 = "^1.5.4"
isort = "^5.6.4"
jupyter_nbextensions_configurator = "^0.4.1"
en-ner-bionlp13cg-md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_ner_bionlp13cg_md-0.3.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
