[tool.poetry]
name = "proseflow"
version = "0.1.2"
description = ""
authors = ["Markus Strasser <strasser.ms@gmail.com> Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
en_core_sci_md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_core_sci_md-0.2.5.tar.gz"}
python = "^3.7.2"
nbdev = "^1.1.5"
multipledispatch = "^0.6.0"
gspread = "^3.6.0"
pandas = "^1.1.4"
stanza = "^1.1.1"
requests = "^2.25.0"
python-dotenv = "^0.15.0"
typeguard = "^2.10.0"
twine = "^3.2.0"
varname = "^0.5.3"
boto3 = "^1.16.21"
botocore = "^1.19.21"
faiss-cpu = "^1.6.4"
toolz = "^0.11.1"
jupyter_contrib_nbextensions = "^0.5.1"
autopep8 = "^1.5.4"
isort = "^5.6.4"
jupyter_nbextensions_configurator = "^0.4.1"
en-ner-bionlp13cg-md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_ner_bionlp13cg_md-0.3.0.tar.gz"}
jupyter = "^1.0.0"
lab = "^6.2"
jupyterlab-git = "^0.23.2"
sentence-transformers = "^0.3"
simpletransformers = "^0.51.3"
beautifulsoup4 = "^4.9.3"
jupyterlab = "3.0.6"
tabulate = "^0.8.9"
pydash = "^4.9.2"
biopython = "^1.78"
textacy = "^0.10.1"
spacy-stanza = "^0.2.4"
more-itertools = "^8.7.0"
deplacy = "^1.9.1"
graphviz = "^0.16"
scispacy = "0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
